Fix: Address deprecation warnings related to primitive object instantiation and AccessControlException